@@ -25,6 +25,8 @@ option document_heading_prefix : string = "isamarkup" (standard)
   -- "prefix for LaTeX macros generated from 'chapter', 'section' etc."
 option document_comment_latex : bool = false
   -- "use regular LaTeX version of comment.sty, instead of historic plain TeX version"
+option document_cite_commands : string = "cite,nocite,citet,citep"
+  -- "antiquotation commands to determine the structure of bibliography"
 
 option thy_output_display : bool = false
   -- "indicate output as multi-line display-style material"
